force-app/main/default/objects/CMSForceSites__c/CMSForceSites__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Additional Sites information needed for CMSForce.</description>
    <label>CMSForce Sites</label>
</CustomObject>