force-app/main/default/objects/CMSForceSites__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Go to the detail page of your Site definition in Setup and copy the Id which shows in the Url of your browser.</inlineHelpText>
    <label>Site Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>