force-app/main/default/objects/CMSForceSites__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>The name of the Site (for reference only)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the Site (for reference only)</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>