force-app/main/default/objects/CMSForceSites__c/fields/Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Site_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the full Site url as it appears in the Site definition page in setup (Default web address).</inlineHelpText>
    <label>Site Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>